# income-tracker

./: .gitignore  LICENSE  LICENSE.txt  README.md  db.sqlite3  manage.py  pyproject.toml
IncomeTracker/: asgi.py  settings.py  urls.py  wsgi.py
incomes/: admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
incomes/migrations/: 0001_initial.py  0002_income_recurring_alter_income_category.py  0003_alter_category_options_alter_income_options_and_more.py  0004_income_expiration_date.py  0005_category_user_alter_category_name_and_more.py  0006_userprofile.py  0007_alter_category_user_alter_income_user.py  0008_alter_userprofile_user.py  0009_alter_income_amount.py  0010_alter_income_amount_and_more.py  0011_remove_income_amount_positive.py  0012_alter_income__description_encrypted.py  0013_alter_category_options_alter_category_name_and_more.py  0014_category_deleted_at_category_is_deleted_and_more.py  0015_alter_income_recurring.py  0016_income_currency.py  0017_alter_userprofile_options_and_more.py  0018_alter_userprofile__whatsapp_number_encrypted.py
incomes/templates/: incomes_per_month.html  incomes_per_year.html
staticfiles/css/: style.css
templates/: base.html  main.html
templates/categories/: category_confirm_delete.html  category_detail.html  category_form.html  category_list.html
templates/incomes/: income_confirm_delete.html  income_detail.html  income_form.html  income_list.html  report.html
templates/partials/: _report_filter_select.html
templates/registration/: logged_out.html  login.html  signup.html
(+3 files in other folders)
