[project]
name = "incometrackernew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0.3",
    "django>=5.2.1",
    "django-debug-toolbar>=5.2.0",
    "djlint>=1.36.4",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.9",
    "python-dateutil>=2.9.0.post0",
    "twilio>=9.6.0",
]

[tool.ruff]
line-length = 200
lint.extend-select = ["I", "ANN"]
